--- a/Fable.Builders.AntDesignCharts.fsproj
+++ b/Fable.Builders.AntDesignCharts.fsproj
@@ -3,7 +3,7 @@
         <TargetFramework>net6.0</TargetFramework>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <Authors>uxsoft</Authors>
-        <Description>Fable computation expression based bindings for @ant-design/chart</Description>
+        <Description>Fable computation expression based bindings for @ant-design/charts</Description>
         <PackageProjectUrl>https://github.com/uxsoft/Fable.Builders.AntDesignCharts</PackageProjectUrl>
         <PackageIcon>icon.png</PackageIcon>
         <RepositoryUrl>https://github.com/uxsoft/Fable.Builders.AntDesignCharts</RepositoryUrl>
@@ -12,7 +12,7 @@
     <ItemGroup>
         <Compile Include="Core.fs" />
         <Compile Include="Charts.fs" />
-        <Compile Include="DSL.fs" />
+        <Compile Include="AntCharts.fs" />
     </ItemGroup>
     <ItemGroup>
         <Content Include="*.fsproj; **\*.fs">
@@ -27,6 +27,6 @@
         </None>
     </ItemGroup>
     <ItemGroup>
-      <ProjectReference Include="..\Fable.Builders.React\Fable.Builders.React.fsproj" />
+      <PackageReference Include="Fable.Builders.React" Version="4.7.0" />
     </ItemGroup>
 </Project>
