add a map specific builder

--- a/Fable.Builders.AntDesignCharts.fsproj
+++ b/Fable.Builders.AntDesignCharts.fsproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
         <Compile Include="Core.fs" />
+        <Compile Include="Maps.fs" />
         <Compile Include="Charts.fs" />
         <Compile Include="AntCharts.fs" />
     </ItemGroup>
