factor out maps into a separate file because they'll have their own separate API

--- a/Fable.Builders.AntDesignCharts.fsproj
+++ b/Fable.Builders.AntDesignCharts.fsproj
@@ -13,6 +13,7 @@
         <Compile Include="Core.fs" />
         <Compile Include="Maps.fs" />
         <Compile Include="Charts.fs" />
+        <Compile Include="Maps.fs" />
         <Compile Include="AntCharts.fs" />
     </ItemGroup>
     <ItemGroup>
