--- a/Fable.Builders.AntDesignCharts.fsproj
+++ b/Fable.Builders.AntDesignCharts.fsproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>netstandard2.0</TargetFramework>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <Authors>uxsoft</Authors>
         <Description>Fable computation expression based bindings for @ant-design/charts</Description>
@@ -29,6 +29,6 @@
         </None>
     </ItemGroup>
     <ItemGroup>
-      <PackageReference Include="Fable.Builders.React" Version="4.7.0" />
+      <PackageReference Include="Fable.Builders.React" Version="4.10.0" />
     </ItemGroup>
 </Project>
